@@ -1,3 +1,8 @@
+2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* gameswf/gameswf_as_classes/as_broadcaster.*
+		applied weak_ptr, listener maybe is deleted
+
 2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf_environment.cpp: target maybe NULL
